# e-calc

./: README.md  __main__.py  pyproject.toml
docs/: functions.md
ecalc/: __main__.py  generator.py  parser.py
ecalc/e_calc.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
src/: __main__.py  complex.py  functions.py  generator.py  main.py  pager.py  parser.py
src/e_calc.egg-info/: PKG-INFO
