[project]
name = "ecalc"
version = "0.1.0"
description = "An electrical calculator CLI tool"
authors = [{ name = "Davis Rippon", email = "" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = ["sympy>=1.12"]  # only uses stdlib

[project.scripts]
e-calc = "ecalc.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

